--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'AP'
 - !lcsh 'United States -- Politics and government -- 19th century -- Periodicals'
 - !lcsh 'Literature, Modern -- 19th century -- Periodicals'
+- GITenberg
 title: 'The Continental Monthly, Vol. 2 No 4, October, 1862
 
   Devoted To Literature And National Policy'
